<resources>
    <string name="app_name">Authentication App</string>
    <string name="started_title">Hello You!</string>
    <string name="started_sub_title">
        Nice to meet you, come join our community!\n
        Login:If you already have an account.\n
        Register:To get started with the app.
    </string>
    <string name="illustration_img">Illustration Image</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="login_title">Login to app</string>
    <!--    <string name="login_sub_title">Login</string>-->

    <string name="login_sub_title">
            <font color="#00C988"><b>Login</b></font> If you already have an account.
    </string>
    <!--    <string name="login_sub_title_login">Login</string>-->
    <!--    <string name="login_sub_title_rest">If you already have an account.</string>-->
    <string name="login_email">Your email or username</string>
    <string name="login_password">Your password</string>
    <string name="login_forgot_pw">Forgot password</string>
    <string name="login_havent_account">
        I don\'t have an account
        <font color="#00C988">Register</font>
    </string>
    <string name="register_title">Create an account</string>
    <string name="register_sub_title">
            <font color="#00C988"><b>Register</b></font> To get started with the app.
    </string>
    <string name="register_fullname">Your full name</string>
    <string name="register_email">Your email</string>
    <string name="register_username">Your username</string>
    <string name="your_password">Your password</string>
    <string name="register_confirm_password">Confirm password</string>
    <string name="register_have_account">
        I already have an account
        <font color="#00C988"><b>Login</b></font>
    </string>
    <string name="hello_title">Hello World!</string>
    <string name="home_sub_title">Welcome to home</string>
    <string name="btn_logout">LOGOUT</string>


    <!--    <string name="login_sub_title_rest">If you already have an account.</string>-->
    <!--    val spannable = SpannableString("$loginText $restText")-->

</resources>